--- a/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
+++ b/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
@@ -186,31 +186,37 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jbtnAddOrder" max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jbtnBackorderedOrders" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jbtnOrdersByPhone" max="32767" attributes="0"/>
+                                  <Component id="jbtnUpdateOrderStatus" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jtfPhone" max="32767" attributes="0"/>
+                                  <Component id="jtfOrderNo" min="-2" pref="112" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="jcbOrderStatus" min="-2" pref="101" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jbtnGetAllOrders" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jbtnGetPendingOrders" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jbtnAddOrder" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jbtnBackorderedOrders" alignment="0" max="32767" attributes="0"/>
                               <Component id="jbtnShippingOrders" alignment="0" max="32767" attributes="0"/>
                               <Component id="jbtnPendingOrders" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jbtnOrdersByPhone" max="32767" attributes="0"/>
-                              <Component id="jbtnUpdateOrderStatus" max="32767" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="jtfPhone" max="32767" attributes="0"/>
-                          <Component id="jtfOrderNo" min="-2" pref="112" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jcbOrderStatus" min="-2" pref="101" max="-2" attributes="0"/>
-                      <EmptySpace pref="76" max="32767" attributes="0"/>
+                      <EmptySpace pref="92" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -225,7 +231,11 @@
                       <Component id="jbtnShippingOrders" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnBackorderedOrders" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
+                      <Component id="jbtnGetPendingOrders" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jbtnGetAllOrders" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jbtnOrdersByPhone" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jtfPhone" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -239,7 +249,7 @@
                           <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jcbOrderStatus" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="95" max="32767" attributes="0"/>
+                      <EmptySpace pref="40" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -247,7 +257,7 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="jbtnPendingOrders">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Get Pending Orders"/>
+                <Property name="text" type="java.lang.String" value="Get InProgress Orders"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnPendingOrdersActionPerformed"/>
@@ -255,7 +265,7 @@
             </Component>
             <Component class="javax.swing.JButton" name="jbtnShippingOrders">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Get Shipping Orders"/>
+                <Property name="text" type="java.lang.String" value="Get Shipped Orders"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnShippingOrdersActionPerformed"/>
@@ -328,6 +338,22 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnAddOrderActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnGetPendingOrders">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Get Pending Orders"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnGetPendingOrdersActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="jbtnGetAllOrders">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Get All Orders"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnGetAllOrdersActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
