[DALTest] IsDBAvailable added

--- a/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
+++ b/DALTest/src/com/lge/spartan/daltest/DALTestForm.form
@@ -55,6 +55,8 @@
               <Component id="jbtnInitDB" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jbtnUninitDB" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jbtnIsAvailable" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Component id="jTabbedPane1" max="32767" attributes="0"/>
@@ -67,6 +69,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jbtnInitDB" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jbtnUninitDB" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jbtnIsAvailable" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jTabbedPane1" max="32767" attributes="0"/>
@@ -614,6 +617,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnUninitDBActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbtnIsAvailable">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="IsDBAvailable?"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnIsAvailableActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
