--- a/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidgetView.form
+++ b/SupervisorApp/src/com/lge/spartan/supervisor/view/AddWidgetView.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Add Widget"/>
+    <Property name="title" type="java.lang.String" value="Create New Widget"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -132,7 +132,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="createWidget">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Create New Widget"/>
+        <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="createWidgetActionPerformed"/>
